<resources>
    <string name="app_name">Equipment</string>
    <string name="equipment_error_code">code %1$d: %2$s</string>
    <string name="equipment_init_failure">Initialization failure</string>
    <string name="equipment_incorrect_settings">Incorrect settings</string>
    <string name="equipment_payment_incorrect">Incorrect payment amount</string>
    <string name="equipment_type_close_incorrect">Incorrect type of payment</string>
    <string name="equipment_incorrect_product_name">The product name is incorrect</string>
    <string name="equipment_incorrect_product_price">The product price is incorrect</string>
    <string name="equipment_incorrect_product_quantity">Некорректное количество товара</string>

    <string name="connection">Connection</string>
    <string name="test_print">Print</string>
    <string name="device_info">Device info</string>
    <string name="text_print">Test print</string>
    <string name="setting_received">Setting received successfully</string>

    <string name="connection_address">1. Connection address</string>
    <string name="edittext.hint.url">url address</string>
    <string name="edittext.hint.port">port</string>
    <string name="connect">Connect</string>
    <string name="device_type">2. Device type</string>
    <string name="not_selected">Not selected</string>
    <string name="model">3. Model</string>
    <string name="driver">4. Driver</string>
    <string name="connect_in_progress">Connect in progress …</string>
    <string name="check_printer">6. Check printer</string>
    <string name="no_data">No data</string>
    <string name="wrong_url_format">Wrong url format</string>
    <string name="save_setting">save settings</string>
    <string name="additional_printing_settings">5. Additional printing settings</string>
    <string name="equipment_lib_title_atol">ATOL Equipment</string>
    <string name="equipment_lib_title_print_server">Print Server</string>
    <string name="equipment_lib_operation_not_supported">The operation type %1$s isn\'t supported</string>
    <string name="equipment_error_network_with_description">Network error. Check out the connection. %1$s</string>
    <string name="equipment_error_mapping_with_description">Error while mapping of data: %1$s</string>
    <string name="equipment_error_unknown_with_description">Unknown error: %1$s</string>
    <string name="open_shift">Open shift</string>
    <string name="equipment_lib_title_posiflex">Posiflex-compatible device</string>
    <string name="equipment_lib_driver_connection_network">Network</string>
    <string name="equipment_lib_driver_connection_usb">USB</string>
    <string name="equipment_libr_title_connection_type">Connection Type</string>
    <string name="equipment_lib_hint_host">Host</string>
    <string name="equipment_lib_hint_port">Port</string>
    <string name="equipment_lib_hint_printer_code_page">Character table code for cp1251 (Cyrillic)</string>
    <string name="equipment_error_method_not_supported">The method isn\'t supported</string>
    <string name="equipment_error_host_connection_failure">Failed to connect to a given host</string>
    <string name="equipment_error_time_out">Time is out</string>
    <string name="equipment_error_io_exception">Connection failure: %1$s</string>
    <string name="title_printer_code_page">Characters table</string>
    <string name="info_printer_code_page">A code (number) of a characters table identifies a code page that printer uses to print text.\n%1$s uses cp1251 code page for printing text.\nIn order to correctly printing this code page you need to set a related code page in your printer.\nUsually Posiflex printers use code 28 and Atol printers use code 6.\nYour printer may have other code. Please read user manual for your device.</string>
    <string name="equipment_hint_no_usb_devices_connected">There are no connected usb devices.\nPlease check your connection.</string>
    <string name="equipment_accept_settings">Accept the settings</string>
    <string name="equipment_device_not_selected">Device isn\'t set</string>
    <string name="incorrect_client_contact">Incorrect client contact</string>
    <string name="incorrect_cashier_inn">Incorrect cashier INN</string>
    <string name="incorrect_cashier_name">Incorrect cashier name or position</string>
    <string name="incorrect_payment_place">Incorrect payment place</string>
    <string name="hint_offset_lines">Offset for header and footer</string>
    <string name="printer_error_template">Error [%1$s]: %2$s</string>
    <string name="error_getting_error_date">can\'t get first unsent doc date</string>
    <string name="error_ofd_unsent_count">Unsent documents\n%1$d</string>
    <string name="error_getting_ofd_unsent_count">can\'t get OFD unsent docs count</string>
    <string name="equipment_lib_title_shtrih">Shtrih-compatible device</string>
    <string name="equipment_lib_session_expired">ECR session is expired. Please, close session.</string>
    <string name="tax_no_vat">Without VAT</string>
    <string name="tax_vat_10">VAT 10%</string>
    <string name="tax_vat_18">VAT 18%</string>
    <string name="tax_vat_0">VAT 0%</string>
    <string name="tax_vat_18_118">VAT 18/118</string>
    <string name="tax_vat_10_110">VAT 10/110</string>
    <string name="equipment_lib_error_taxes_empty">There are no tax rates</string>
    <string name="equipment_lib_obtaining_taxes_failed">Obtaining taxes failed: %1$s</string>
</resources>
