<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connection_address"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:baselineAligned="true"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1">

                    <EditText
                        android:id="@+id/ip_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:digits="0123456789."
                        android:hint="@string/edittext.hint.url"
                        android:imeOptions="actionNext"
                        android:inputType="number|textNoSuggestions"
                        android:maxLength="18"
                        tools:text="192.168.84.8" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackground">

                    <EditText
                        android:id="@+id/port"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:digits="0123456789"
                        android:hint="@string/edittext.hint.port"
                        android:imeOptions="actionNext"
                        android:inputType="number|textNoSuggestions"
                        android:maxLength="6"
                        android:minWidth="70sp"
                        tools:text="9004" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Button
                android:id="@+id/connect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/connect" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/device_type_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_type"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/device_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableRight="@drawable/ic_options_land_state"
                android:hint="@string/not_selected"
                android:paddingBottom="@dimen/offset_small"
                android:paddingTop="@dimen/offset_small"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="Фискальный регистратор" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/light_grey"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/model_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/model"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableRight="@drawable/ic_options_land_state"
                android:hint="@string/not_selected"
                android:paddingBottom="@dimen/offset_small"
                android:paddingTop="@dimen/offset_small"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="FPrint-11 ПТК / ЕНВД" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/driver_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/driver"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/driver"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/selectableItemBackground"
                android:drawableRight="@drawable/ic_options_land_state"
                android:hint="@string/not_selected"
                android:paddingBottom="@dimen/offset_small"
                android:paddingTop="@dimen/offset_small"
                android:textAppearance="?android:attr/textAppearanceMedium"
                tools:text="АТОЛ: Драйвер принтеров чеков" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/light_grey"
            android:padding="4dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/additional_printing_settings"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <LinearLayout
                android:id="@+id/settings_layout"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:divider="@drawable/divider_vertical_transparent"
                android:orientation="vertical"
                android:showDividers="beginning|middle|end" />

            <Button
                android:id="@+id/save_settings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/save_setting" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_printer"
                android:textAppearance="?android:attr/textAppearanceLarge" />
            <Button
                android:id="@+id/testPrint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:text="@string/test_print" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>